# RedGCI

./: .gitignore  BUILD_README.md  CMakeLists.txt  Context.md  README.md  build_test
.github/workflows/: CI.yml
include/: gci_types.h  intercept_fsm.h  merge_controller.h  message_handler.h  pursuit_solver.h
lua/: Export.lua  REDGCI.lua  REDGCI_Intel.lua  REDGCI_TestMission.lua  gci_bridge.lua  gci_messages.lua  gci_mission.lua  test_mission.lua
src/: gci_lua.c  gci_lua.def  gci_server.c  intercept_fsm.c  merge_controller.c  message_handler.c  pursuit_solver.c
test/: test_2v2_split.c  test_pursuit.c
